# mujoco_try

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  debug.md  debug.zh-CN.md  mujoco_studio
libs/hello/: CMakeLists.txt
libs/hello/src/: main.cpp
mujoco/mujoco-3.10.0/: THIRD_PARTY_NOTICES
mujoco/mujoco-3.10.0/include/: imconfig.h  imgui.h  imgui_internal.h  implot.h  implot_internal.h  imstb_textedit.h  imstb_truetype.h
mujoco/mujoco-3.10.0/include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_emscripten.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_ngage.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_windows.h  SDL_config_wingdk.h  SDL_config_winrt.h  SDL_config_xbox.h  SDL_copying.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  (+47 more)
mujoco/mujoco-3.10.0/include/mujoco/: .clang-format  mjassert.h  mjdata.h  mjexport.h  mjmacro.h  mjmodel.h  mjplugin.h  mjrender.h  mjrfilament.h  mjsan.h  mjspec.h  mjspecmacro.h  mjtype.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h
mujoco/mujoco-3.10.0/lib/: libmujoco.so.3.10.0
mujoco/mujoco-3.10.0/model/adhesion/: README.md  active_adhesion.xml
mujoco/mujoco-3.10.0/model/balloons/: balloons.xml
mujoco/mujoco-3.10.0/model/car/: car.xml
mujoco/mujoco-3.10.0/model/cards/: cards.xml
mujoco/mujoco-3.10.0/model/cube/: README.md  cube_3x3x3.xml
mujoco/mujoco-3.10.0/model/flex/: basket.xml  bunny.xml  bunny_multicell.xml  bunny_quadratic.xml  bunny_shell.xml  bunny_with_uv.xml  cloth_sdf.xml  flag.xml  floppy.xml  gripper.xml  gripper_2d.xml  gripper_trilinear.xml  hollow_vs_solid.xml  jelly.xml  mannequin.xml  pancake.xml  pinch.xml  plate.xml  poncho.xml  poncho_edgeequality.xml  press.xml  pulley.xml  quadratic.xml  scene.xml  softbox.xml  sphere_full.xml  sphere_passive.xml  sphere_radial.xml  sphere_trilinear.xml  strain.xml  trampoline.xml  trilinear.xml
mujoco/mujoco-3.10.0/model/hammock/: hammock.xml
mujoco/mujoco-3.10.0/model/humanoid/: 100_humanoids.xml  22_humanoids.xml  README.md  humanoid.xml  humanoid100.xml
mujoco/mujoco-3.10.0/model/mug/: mug.xml
mujoco/mujoco-3.10.0/model/replicate/: README.md  bowl.xml  bunnies.xml  container.xml  cylinder.xml  helix.xml  leaves.xml  newton_cradle.xml  particle.xml  particle_free.xml  particle_free2d.xml  scene.xml  stonehenge.xml  tendon.xml
mujoco/mujoco-3.10.0/model/sleep/: 100_humanoids.xml  (+2 more)
mujoco/mujoco-3.10.0/sample/: array_safety.h  basic.cc  compile.cc  dependencies.cc  record.cc  testspeed.cc
mujoco/mujoco-3.10.0/simulate/: README.md  glfw_adapter.cc  glfw_adapter.h  glfw_corevideo.h  glfw_corevideo.mm  glfw_dispatch.cc  glfw_dispatch.h  main.cc  platform_ui_adapter.cc  platform_ui_adapter.h  simulate.cc  simulate.h
mujoco/mujoco-3.10.0/wasm/: mujoco.d.ts  mujoco.js  mujoco.wasm  mujoco.wasm.map  mujoco_wasm_benchmark.d.ts  mujoco_wasm_benchmark.js  mujoco_wasm_benchmark.wasm  mujoco_wasm_benchmark.wasm.map
tutorial/: CMakeLists.txt
tutorial/docs/: 00_overview.md  00_overview.zh-CN.md  01_programming_basics.md  01_programming_basics.zh-CN.md  02_double_inverted_pendulum_controller.md  02_double_inverted_pendulum_controller.zh-CN.md  03_sensor_suite.md  03_sensor_suite.zh-CN.md  04_rm26_import.md  04_rm26_import.zh-CN.md
tutorial/include/mujoco_tutorial/: common.hpp  double_pendulum_controller.hpp
tutorial/models/: double_inverted_pendulum.xml  free_box.xml  hinge_arm.xml  sensor_suite.xml
tutorial/rm26_version3_engineering_model/meshes/: camera_link.STL  end_link.STL  fl_link.STL  fr_link.STL  image_pitch_link.STL  j0_link.STL  j4_link_part01.STL  j5_link.STL  rl_link.STL  rr_link.STL
tutorial/rm26_version3_engineering_model/urdf/: rm26_version3_engineering_model.urdf  rm26_version3_engineering_model_mujoco.urdf  rm26_version3_engineering_model_mujoco_split.urdf
tutorial/src/: 01_load_and_step.cpp  02_state_access.cpp  03_control_loop.cpp  04_step_split_controller.cpp  05_callbacks.cpp  06_dynamics_queries.cpp  07_model_editing.cpp  08_visualization_scene.cpp  09_sensor_suite.cpp  10_double_inverted_pendulum.cpp  11_rm26_import_check.cpp  12_ui_definition.cpp  13_plugin_loading.cpp  14_visualized_double_pendulum.cpp  common.cpp  double_pendulum_controller.cpp
(+83 files in other folders)
